# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  12 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    vlans can now be configured with their own interface scripts, which
    means that they can now be renamed, #128283.
    Thanks to Jonathan deBoer.

  11 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    udhcpc.sh now works with the -q|--quit option again, #129437.

  09 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    RC_COLDPLUG now controls if we add coldplugged services to the boot
    runlevel or not, #129331.

    The ccwgroup module now really works!

* baselayout-1.12.0_pre17 (08 Apr 2006)

  07 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    net modules now apply their own metric if they are activated, which makes
    for a much easier and less mesy calculation.

  05 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now stores the fact that it failed to to /dev/.rcsysinit
    existing in the directory /dev/.rcboot. rc adds services in
    /dev/.rcboot to the boot list and then rm -f's that directory. This
    solves the issue of udev-089 forcing coldplug removal.

  03 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    rc-status doesn't report broken symlinks when querying all levels,
    #113755 again.

    All net modules how have a .sh suffix to indicate that they are shell
    scripts as not everyone uses vim.

    runscript.sh now has a --nodeps option so that no depends are checked
    when starting and stopping a service.

    net.lo and system modules now support resolvconf instead of using our
    own internal system.

    DHCP and PPP clients no longer have helper scripts. As such they don't
    change service status at all. Moved helpers.d/functions back into net.lo

    Moved {get,save}_options from functions.sh to rc-services.sh

    Removed whole load of crud from hostname init script, fixes #38172 again