@@ -22,7 +22,7 @@ RC_INTERACTIVE="yes"
 # RC_COLDPLUG to no.
 # For more fine grained control you can list full service names to allow
 # them to coldplug and prefix them with ! so they don't coldplug.
-# Example - RC_COLDLUG="net.wlan !net.*"
+# Example - RC_COLDPLUG="net.wlan !net.*"
 # This allows net.wlan and any service not matching net.* to coldplug.
 
 RC_COLDPLUG="yes"
