@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  15 Apr 2006; Roy Marples <uberlord@gentoo.org>:
+
+    net services are now calculated properly in trace_dependencies.
+
+    arping.sh now tests if the interface exists or not.
+
   12 Apr 2006; Roy Marples <uberlord@gentoo.org>:
 
     vlans can now be configured with their own interface scripts, which
